# cnpy

./: CMakeLists.txt  README.md  cnpy.cpp  cnpy.h  example1.cpp  example_mmap.cpp
